--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -13,7 +13,7 @@ $blue: #418DA6;
 
 body {
   margin: 0;
-
+  overflow-x: hidden;
   font-family: 'Source Sans Pro', sans-serif;
 
   h1, h2, h3 {
@@ -58,7 +58,7 @@ nav {
 
 .section {
   display: block;
-  width: 100vw;
+  width: calc(100vw - 32px);
   margin: 0px;
   padding: 16px;
   &.red {
@@ -81,36 +81,68 @@ nav {
 }
 
 .caroussel {
-  width: 100%;
+  // width: 100%;
   position: relative;
   margin: 1em;
   border: 1px solid #ccc;
-  overflow: hidden;
+  // overflow: hidden;
   height: 230px;
 
   #work1 {
-    background: url('assets/facebook.png') no-repeat 200px;
+    background: url('assets/facebook.png') no-repeat;
+    background-size: contain;
   }
   
   #work2 {
-    background: url('assets/allstate.png') no-repeat 200px;
+    background: url('assets/allstate.png') no-repeat;
+    background-size: contain;
   }
   
   #work3 {
-    background: url('assets/cs196.png') no-repeat 200px;
+    background: url('assets/cs196.png') no-repeat;
+    background-size: contain;
   }
 
-  > div {
-    margin: 0;
-    padding: 0;
-    width:100%;
+  ul {
+    width: 100%;
     height: 100%;
+    margin: 0px;
+    list-style: none;
+    background-color: #fff;
+    -webkit-padding-start: 0px; 
+    overflow: hidden;
+    li {
+      display: block;
+      float: left;
+      width: 100%;
+      height: 100%;
 
-    position: absolute;
-    top: 400px;
+      line-height: 200px;
+      text-align: center;
 
-    &.current {
-      top: 0px;
+      .center {
+        display: inline-block;
+        vertical-align: middle;
+        line-height: normal;
+      }
     }
   }
+
+  .controls {
+    position: absolute;
+    font-size: 2em;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+
+    &#prev {
+      left: 0px;
+    }
+
+    &#next {
+      right: 5px;
+    }
+  }
+
+
 }
