--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -18,6 +18,7 @@ body {
 
   h1, h2, h3 {
     margin: 0px;
+    margin-top: 20px;
   }
 
   h1, h2, h3, a, p, span {
@@ -32,6 +33,7 @@ body {
 }
 
 nav {
+  height: 150px;
   width: 100vw;
   display: block;
   background-color: $wash;
@@ -40,10 +42,16 @@ nav {
   ul {
     float: right;
     list-style: none;
-    margin: 0;
+    margin-top: 0;
+    margin-right: 16px;
+    height: 100%;
     li {
+      font-size: 28px;
+      height: 100%;
+      vertical-align: middle;
+      line-height: 150px;
       float: left;
-      padding: 20px;
+      padding: 0px 20px;
       cursor: pointer;
       color: $white;
       background-color: $wash;
@@ -56,28 +64,42 @@ nav {
   }
 }
 
+.wrapper {
+  margin-top: 150px;
+}
+
 .section {
   display: block;
   width: calc(100vw - 32px);
   margin: 0px;
-  padding: 16px;
+  padding: 40px 16px;
   &.red {
     background-color: $red;
   }
   &.green {
     background-color: $green;
   }
-}
+  &.yellow {
+    background-color: $yellow;
+  }
 
-.wrapper {
-  margin-top: 58px;
+  .col {
+    width: 33%;
+    display: inline-block;
+    // float: left;
+  }
 }
 
 #profile-picture {
-  margin-top: 30px; 
-  width: 150px;
-  border-radius: 75px;
+  margin-top: 60px; 
+  width: 300px;
+  border-radius: 150px;
   border: 1px $white solid;
+}
+
+#name {
+  font-size: 60px;
+  margin-top: 50px;
 }
 
 .caroussel {
