--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -16,6 +16,8 @@ body {
   overflow-x: hidden;
   font-family: 'Source Sans Pro', sans-serif;
 
+  background: url('assets/background.jpg') top right no-repeat; background-attachment:fixed;
+
   h1, h2, h3 {
     margin: 0px;
     margin-top: 20px;
@@ -109,6 +111,8 @@ nav {
   border: 1px solid #ccc;
   // overflow: hidden;
   height: 230px;
+
+  z-index: -1;
 
   #work1 {
     background: url('assets/facebook.png') no-repeat;
